fixed overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,6 +50,7 @@ p, h1, h2, h3, h4, h5, h6 {
 html {
       font-family: 'Poppins', sans-serif;
       background: #F8F0E5;
+      overflow-x: hidden;
 }
 
 
