--- a/src/pages/page-index.module.scss
+++ b/src/pages/page-index.module.scss
@@ -33,4 +33,6 @@
 .test {
   height: 100vh;
   margin-bottom: 50px;
+  width: fit-content;
+  overflow: hidden;
 }
